<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.questionui.QuestionFragment">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/questionConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="99dp"
                android:layout_height="57dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="100dp"
                android:src="@drawable/knowwelcome"
                app:layout_constraintBottom_toTopOf="@+id/question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/know_image" />

            <TextView
                android:id="@+id/question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/test_question"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#444053"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/first_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                android:background="#DADADA"
                android:fontFamily="@font/raleway_medium"
                android:padding="8dp"
                android:text="@string/test_answer_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question" />

            <TextView
                android:id="@+id/second_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#DADADA"
                android:fontFamily="@font/raleway_medium"
                android:padding="8dp"
                android:text="@string/test_answer_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/first_answer"
                app:layout_constraintStart_toStartOf="@+id/first_answer"
                app:layout_constraintTop_toBottomOf="@+id/first_answer" />

            <TextView
                android:id="@+id/third_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#DADADA"
                android:fontFamily="@font/raleway_medium"
                android:padding="8dp"
                android:text="@string/test_answer_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/second_answer"
                app:layout_constraintStart_toStartOf="@+id/second_answer"
                app:layout_constraintTop_toBottomOf="@+id/second_answer" />

            <TextView
                android:id="@+id/fourth_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#DADADA"
                android:fontFamily="@font/raleway_medium"
                android:padding="8dp"
                android:text="@string/test_answer_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/third_answer"
                app:layout_constraintStart_toStartOf="@+id/third_answer"
                app:layout_constraintTop_toBottomOf="@+id/third_answer" />

            <Button
                android:id="@+id/startQuiz"
                style="@style/Widget.Know.Button"
                android:layout_width="180dp"
                android:layout_height="62dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/next_text"
                android:accessibilityLiveRegion="polite"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fourth_answer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>